# Embedded-System-Smart-Lock-STM32

./: .gitattributes  README.md  Sheet_HTN.SchDoc
HTN_Final/: .cproject  .mxproject  HTN_Final.ioc
HTN_Final/Core/Inc/: as608.h  ssd1306.h  stm32f1xx_it.h
HTN_Final/Core/Src/: app_freertos.c  as608.c  keypad.c  main.c  servo.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
HTN_Final/Debug/: HTN_Final.elf  HTN_Final.list  HTN_Final.map  objects.list
HTN_Final/Debug/Core/Src/: CLCD_I2C.d  app_freertos.cyclo  app_freertos.su  as608.cyclo  as608.su  main.d  oled_ui.cyclo  servo.cyclo  servo.d  servo.su  ssd1306.su  stm32f1xx_hal_msp.cyclo  stm32f1xx_hal_msp.su  subdir.mk
HTN_Final_stm32/: .cproject  .gitignore  HTN_Final.ioc  HTN_Final.launch
HTN_Final_stm32/Core/Inc/: as608.h  keypad.h  oled_ui.h  ssd1306_conf.h
HTN_Final_stm32/Core/Src/: CLCD_I2C.c  app_freertos.c  as608.c  i2c-lcd.c  main.c  ssd1306.c  stm32f1xx_hal_msp.c
HTN_stm32/: .cproject  .project  HTN_Final.ioc
HTN_stm32/Core/Inc/: app_freertos.h  as608.h  i2c-lcd.h  servo.h  stm32f1xx_it.h
HTN_stm32/Core/Src/: app_freertos.c  as608.c  main.c  oled_ui.c  servo.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
HTN_stm32/Debug/: HTN_Final.elf  HTN_Final.list  HTN_Final.map  makefile
HTN_stm32/Debug/Core/Src/: CLCD_I2C.cyclo  CLCD_I2C.su  app_freertos.cyclo  app_freertos.d  app_freertos.su  as608.cyclo  as608.d  as608.su  i2c-lcd.cyclo  i2c-lcd.su  (+13 more)
Hardware web server/smartlock.ino/smartlock/: smartlock.ino
Hardware web server/web/: app.py  server.py
software app server/app/: app.py  pyproject.toml  server.py
(+1 files in other folders)
